# knightwatch

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.svelte  global.css  index.html  main.js
dashboard/src/lib/: api.js
dashboard/src/lib/components/: DockerPane.svelte  LoginPage.svelte  ProcessCard.svelte  ProcessesPane.svelte  ScreensPane.svelte  SignInNotice.svelte  (+3 more)
homebrew/: knightwatch.rb.template
scripts/: install.ps1  install.sh
src/: events.rs  macros.rs  main.rs  prelude.rs  telemetry.rs  utils.rs
src/api/: constants.rs  end_points.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routers.rs  session.rs  utils.rs
src/api/assets/: index.html  main.css  view.css  view.html  view.js
src/config/: app.rs  args.rs  mod.rs  paths.rs  persistent.rs  persistent_args.rs  store.rs  users.rs
src/docker_tracker/: client.rs  commands.rs  container.rs  enums.rs  event.rs  mod.rs  models.rs  structs.rs  tracker.rs  utils.rs
src/errors/: error.rs
src/process_tracker/: client.rs  commands.rs  enums.rs  event.rs  mod.rs  models.rs  process.rs  structs.rs  tracker.rs  utils.rs
src/screen_capture/: capture.rs  client.rs  commands.rs  enums.rs  mod.rs  models.rs  screenshot.rs  structs.rs
src/sse/: dispatcher.rs  handler.rs  handlers.rs  mod.rs
src/system_monitor/: client.rs  enums.rs  mod.rs  models.rs  monitor.rs  structs.rs
src/system_resources/: client.rs  commands.rs  enums.rs  event.rs  mod.rs  models.rs  resources.rs  structs.rs  system.rs  utils.rs
src/systemd/: client.rs  commands.rs  enums.rs  event.rs  mod.rs  models.rs  monitor.rs  proxies.rs  structs.rs  systemd_snap.rs  types.rs  utils.rs
src/telegram_bot/: bot.rs  broadcast.rs  display.rs  keyboards.rs  mod.rs  models.rs  utils.rs
src/telegram_bot/handlers/: auth.rs  docker.rs  mod.rs  process.rs  screenshot.rs  settings.rs  system_resources.rs  systemd.rs
src/webhook/: dispatcher.rs  mod.rs  models.rs  structs.rs
wix/: main.wxs
(+1 files in other folders)
