[package]
name = "knightwatch"
version = "1.0.10"
edition = "2024"
authors = ["YofaGh"]
description = "System Monitoring tool"
homepage = "https://github.com/YofaGh/knightwatch"
repository = "https://github.com/YofaGh/knightwatch"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "C81EA21C-82A5-406E-9389-719E2E0B2150"
path-guid = "58DBAEB2-B794-44A9-BAE0-2E2803C35264"
license = false
eula = false

[features]
default = ["screenshot"]
screenshot = ["xcap"]

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
base64 = "0.22.1"
battery = "0.7.8"
bcrypt = "0.19.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
directories = "6.0.0"
image = { version = "0.25.9", features = ["jpeg", "png"] }
mime_guess = "2.0.5"
native-tls = { version = "0.2.18", features = ["vendored"] }
nvml-wrapper = "0.12.1"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
rpassword = "7.5.2"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
xcap = { version = "0.9.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"
zbus = { version = "5.15.0", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
